images not showing correction first try

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -99,3 +99,8 @@ main .resume img {
 }
 
 
+main .portfolio {
+    
+}
+
+
